--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
   "name": "dandy-intercom",
   "version": "0.1.0",
+  "description": "Very simple Electron based application powered WebRTC to talk with an intercom",
+  "keywords": [],
+  "author": {
+    "name": "Lorenzo Pecchio",
+    "email": "",
+    "url": ""
+  },
   "private": true,
+  "main": "public/electron.js",
+  "scripts": {
+    "react:start": "cross-env BROWSER=none react-scripts start",
+    "react:build": "react-scripts build",
+    "react:test": "react-scripts test",
+    "react:eject": "react-scripts eject",
+    "electron:start": "npm run react:build && cross-env ELECTRON_IS_DEV=true electron .",
+    "start": "concurrently -k -n react,electron -c \"bgBlue.bold,bgCyan.bold\" \"cross-env BROWSER=none npm run react:start\" \"wait-on http://localhost:3000 && cross-env ELECTRON_IS_DEV=true ELECTRON_USE_REACT_SERVER=true electron .\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pack-windows-portable": "npm run react:build && electron-builder -w"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -16,11 +34,12 @@
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "concurrently": "^6.2.0",
+    "cross-env": "^7.0.3",
+    "electron": "^13.1.2",
+    "electron-builder": "^22.11.7",
+    "wait-on": "^5.3.0"
   },
   "eslintConfig": {
     "extends": [
@@ -39,12 +58,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "concurrently": "^6.2.0",
-    "cross-env": "^7.0.3",
-    "electron": "^13.1.2",
-    "electron-builder": "^22.11.7",
-    "wait-on": "^5.3.0"
   }
 }
